# intelextract

./: .gitignore  README.md  pyproject.toml
src/intelextract/: __init__.py  cli.py  extractor.py  fetcher.py  models.py
tests/: test_extractor.py  test_fetcher.py  test_models.py
