[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "intelextract"
version = "1.0.0"
description = "CLI for extracting structured threat intel from threat reports via the Anthropic API."
authors = [
    { name = "R. Santos" }
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.39",
    "httpx>=0.27",
    "trafilatura>=1.12",
    "pydantic>=2.7",
]

[project.scripts]
intelextract = "intelextract.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest"]
